implemented incident list & add zaglushka(ne pomnu kak perevod)
